test/tests/stages/14_pointers/invalid_parse/malformed_function_declarator.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  (
  identifier(foo)
  (
  void
  )
  )
  (
  void
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
